--- a/README.Rmd
+++ b/README.Rmd
@@ -13,10 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# clap
+# clap  <img src="man/figures/logo.png" align="right" width = 150 />
 
 <!-- badges: start -->
 <!-- badges: end -->
+
+## Overview
+
 The issue of overlapping regions in multidimensional data arises when different classes or clusters share similar feature representations, making it challenging to delineate distinct boundaries between them accurately. This package provides methods for detecting and visualizing these overlapping regions using partitional clustering techniques based on nearest neighbor distances.
 
 
